--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -212,11 +212,14 @@ services:
     pid: host
     security_opt:
       - apparmor=unconfined
+    command: mkdir /pool/ciencias; mkdir /pool/phedex
     volumes:
       - ${HOST_FOLDER}:${HOST_FOLDER}:z
       - /sys/fs/cgroup
       - ${EOS_FOLDER}:/eos:shared
       - /mnt_pool/ciencias/opendata:/opt:ro
+      - /mnt_pool/ciencias:/pool/ciencias:ro
+      - /mnt_pool/phedex:/pool/phedex:ro
     env_file:
       - .env
 
